Added fancy map dot

--- a/views/index.erb
+++ b/views/index.erb
@@ -44,7 +44,13 @@
     </div>
 
     <div id="confirm-screen" class="absolute-center" style="display:none">
-
+      <div id="confirm-details"></div>
+      <div id="confirm-map">
+        <a href="http://hackerschool.com" id="target" title="Brooklyn">
+          <img src="/images/pulse.png" alt="" class="indicator">
+          <span id="pulse"></span>
+        </a>
+      </div>
 
     </div>
   </div>
