--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -274,7 +274,6 @@ Cross site syles
 }
 .absolute-center {
   width: 60%;
-  height: 50% !important;
   overflow: auto;
   margin: auto;
   position: absolute  !important;
@@ -290,7 +289,7 @@ Cross site syles
 #wrap #search-screen {
   text-align: center;
   position: relative;
-  height: 100%;
+  height: 220px;
 }
 #wrap #search-screen #logo {
   font-family: 'Gotham-Bold';
@@ -382,7 +381,7 @@ Cross site syles
 }
 #wrap #confirm-screen {
   width: 800px;
-  height: 450px;
+  height: 380px;
   background: -webkit-linear-gradient(top, #ffffff, #f8f8f8);
   border: 1px solid #EB5858;
   border-color: rgba(228, 118, 115, 0.45);
@@ -397,6 +396,20 @@ Cross site syles
   font-family: 'Gotham-Bold';
   color: #423f3d;
   margin-top: 250px;
+}
+#wrap #confirm-screen #confirm-details {
+  width: 306px;
+  height: 100%;
+  display: inline-block;
+}
+#wrap #confirm-screen #confirm-map {
+  width: 494px;
+  height: 100%;
+  background-color: green;
+  display: inline-block;
+  margin-left: -5px;
+  background-image: url('https://maps.googleapis.com/maps/api/staticmap?zoom=14&size=494x450&sensor=false&visual_refresh=true&jpg=true&scale=2&center=37.790092,-122.404028');
+  background-size: 494px 450px;
 }
 /* #################
 ####################
@@ -453,4 +466,112 @@ Cross site syles
   width: 100%;
   margin-top: 50px;
   color: inherit;
+}
+/* Pulse animations - Kudos to Moeed Mohammad for this */
+a#target {
+  width: 30px;
+  height: 30px;
+  display: block;
+  position: absolute;
+  margin-top: 250px;
+  margin-left: 220px;
+}
+a#target #pulse {
+  width: 50px;
+  height: 50px;
+  display: block;
+  position: absolute;
+  top: -14px;
+  left: -14px;
+  border: 4px solid #30a3ec;
+  border-radius: 50px;
+  box-shadow: 0 0 5px #a0eaff;
+  /* Animate */
+
+  -webkit-animation-name: pulsing;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-out;
+  -moz-animation-name: pulsing;
+  -moz-animation-duration: 1s;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-timing-function: ease-out;
+  -o-animation-name: pulsing;
+  -o-animation-duration: 1s;
+  -o-animation-iteration-count: infinite;
+  -o-animation-timing-function: ease-out;
+  animation-name: pulsing;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-out;
+}
+/* The animation */
+/* WebKit/Safari and Chrome */
+@-webkit-keyframes pulsing {
+  0% {
+    -webkit-transform: scale(0.3);
+    transform: scale(0.3);
+    opacity: 0.5;
+  }
+  80% {
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(2.5);
+    transform: scale(2.5);
+    opacity: 0;
+  }
+}
+/* Gecko/Firefox */
+@-moz-keyframes pulsing {
+  0% {
+    -moz-transform: scale(0.3);
+    transform: scale(0.3);
+    opacity: 0.5;
+  }
+  80% {
+    -moz-transform: scale(1.5);
+    transform: scale(1.5);
+    opacity: 0;
+  }
+  100% {
+    -moz-transform: scale(2.5);
+    transform: scale(2.5);
+    opacity: 0;
+  }
+}
+/* Presto/Opera */
+@-o-keyframes pulsing {
+  0% {
+    -o-transform: scale(0.3);
+    transform: scale(0.3);
+    opacity: 0.5;
+  }
+  80% {
+    -o-transform: scale(1.5);
+    transform: scale(1.5);
+    opacity: 0;
+  }
+  100% {
+    -o-transform: scale(2.5);
+    transform: scale(2.5);
+    opacity: 0;
+  }
+}
+/* Standard */
+@keyframes pulsing {
+  0% {
+    transform: scale(0.3);
+    opacity: 0.5;
+  }
+  80% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
+  }
 }
