Added check for missing zip and query with animations

--- a/views/index.erb
+++ b/views/index.erb
@@ -41,15 +41,13 @@
       <!-- End query form -->
 
       <div id="query-button" class="fancy-button" onClick="transitionToConfirm();" title="ENGAGE SUPERGALACTIC SEARCH POWERS">Find it!</div>
+      <div id="query-message"></div>
     </div>
 
     <div id="confirm-screen" class="absolute-center" style="display:none">
       <div id="confirm-details"></div>
       <div id="confirm-map">
-        <a href="http://hackerschool.com" id="target" title="Brooklyn">
-          <img src="/images/pulse.png" alt="" class="indicator">
-          <span id="pulse"></span>
-        </a>
+
       </div>
 
     </div>
