disabled autocomplete on zip input box

--- a/views/index.erb
+++ b/views/index.erb
@@ -30,7 +30,7 @@
         <div id="query-zip-section">
           <div id="query-zip-fields">
             <input type="text" id="searchbox" name="query" autofocus/>
-            <input type="text" class="zip" id="zipbox" name="zip" maxlength = "6" step="1" pattern="\d+"/>
+            <input type="text" class="zip" id="zipbox" name="zip" maxlength = "6" step="1" pattern="\d+" autocomplete="off"/>
             <label class="zipbox-label zip" for="zipbox">Zip</label>
           </div>
           <div class="bottominfo-box message">
