--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,7 @@
 <body>
   <div id="wrap">
     <div id="search-screen" class="absolute-center">
-      <div id="logo">Moonsearch</div>
+      <div id="logo">27 Minutes Later</div>
 
       <!-- Begin query form. Wraps all sections between transitions -->
       <form id="search-form" action="/query" method="post">
@@ -34,7 +34,7 @@
             <label class="zipbox-label zip" for="zipbox">Zip</label>
           </div>
           <div class="bottominfo-box message">
-            Find things nearby and in-stock for just $5. We'll email you where to find it in 27 minutes.
+            Find things nearby and in-stock. We'll email you where you can find it in just 27 minutes.
           </div>
         </div>
       </form>
