--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -412,6 +412,24 @@ Cross site syles
   height: 100%;
   display: inline-block;
 }
+#wrap #confirm-screen #confirm-details #confirm-details-countdown {
+  height: 130px;
+  width: 100%;
+  background-image: url(http://audobox.com/images/pricing-stylized-marks.png);
+  background-position: left center;
+  background-size: 13px 32px;
+  background-repeat: no-repeat;
+}
+#wrap #confirm-screen #confirm-details #confirm-details-message {
+  height: 210px;
+  width: 100%;
+  background-color: #F0F3FF;
+}
+#wrap #confirm-screen #confirm-details #confirm-details-location {
+  height: 25px;
+  width: 100%;
+  background-color: #e47673;
+}
 #wrap #confirm-screen #confirm-map {
   width: 494px;
   height: 100%;
