--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -212,6 +212,25 @@ Cross site syles
       width: 306px;
       height: 100%;
       display: inline-block;
+      #confirm-details-countdown {
+        height: 130px;
+        width: 100%;
+
+        background-image: url(http://audobox.com/images/pricing-stylized-marks.png);
+        background-position: left center;
+        background-size: 13px 32px;
+        background-repeat: no-repeat;
+      }
+      #confirm-details-message {
+        height: 210px;
+        width: 100%;
+        background-color: #F0F3FF;
+      }
+      #confirm-details-location {
+        height: 25px;
+        width: 100%;
+        background-color: @retroredlight;
+      }
     }
     #confirm-map {
       width: 494px;
