--- a/views/index.erb
+++ b/views/index.erb
@@ -46,9 +46,16 @@
 
     <div id="confirm-screen" class="absolute-center" style="display:none">
       <div id="confirm-details">
-        <div id="confirm-details-countdown"></div>
-        <div id="confirm-details-message"></div>
-        <div id="confirm-details-location"></div>
+        <div id="confirm-details-countdown">
+          <h1>27</h1>
+          <h4>minutes left</h4>
+        </div>
+        <div id="confirm-details-message">
+          <p>We’re hard at work scouring for Ou Ocha Green Tea. We’ll send you an email very soon!</p>
+        </div>
+        <div id="confirm-details-location">
+          <h3>Mountain View<span>o</span></h3>
+        </div>
       </div>
       <div id="confirm-map">
 
