--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -214,22 +214,72 @@ Cross site syles
       display: inline-block;
       #confirm-details-countdown {
         height: 130px;
-        width: 100%;
-
+        width: auto;
         background-image: url(http://audobox.com/images/pricing-stylized-marks.png);
         background-position: left center;
         background-size: 13px 32px;
         background-repeat: no-repeat;
+        display: block;
+        text-align: right;
+        h1 {
+          font-size: 76px;
+          color: @retroblack;
+          font-family: 'Gotham-Bold';
+          position: absolute;
+          top: 20px;
+          text-align: right;
+          width: 280px;
+        }
+        h4 {
+          font-size: 14px;
+          color: @retroblack;
+          font-family: 'Gotham-Boook';
+          position: absolute;
+          top: 99px;
+          width: 274px;
+          text-align: right;
+        }
       }
       #confirm-details-message {
         height: 210px;
         width: 100%;
         background-color: #F0F3FF;
+        border-top: 1px #C7CEE9 solid;
+        p {
+          width: 280px;
+          line-height: 1.6em;
+          position: absolute;
+          text-align: left;
+          font-size: 12px;
+          color: @retroblack;
+          font-family: 'Gotham-Medium';
+          padding-top: 20px;
+          padding-left: 20px;
+        }
       }
       #confirm-details-location {
         height: 25px;
         width: 100%;
         background-color: @retroredlight;
+        border-top: 1px @retrored solid;
+        h3 {
+          text-transform: uppercase;
+          color: white;
+          font-size: 14px;
+          width: 280px;
+          text-align: right;
+          position: absolute;
+          line-height: 25px;
+          span {
+            font-family: 'Sosa-Regular';
+            text-transform: none;
+            color: #F0F3FF;
+            font-size: 13px;
+            line-height: 25px;
+            padding-left: 20px;
+            float: left;
+          }
+        }
       }
     }
     #confirm-map {
