--- a/views/index.erb
+++ b/views/index.erb
@@ -54,7 +54,7 @@
           <p></p>
         </div>
         <div id="confirm-details-location">
-          <h3>Mountain View<span>o</span></h3>
+          <span>o</span><h3></h3>
         </div>
       </div>
       <div id="confirm-map">
