small style updates to confirmation page

--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -265,7 +265,7 @@ Cross site syles
         span {
           font-family: 'Sosa-Regular';
           text-transform: none;
-          color: #F0F3FF;
+          color: #8B4254;
           font-size: 13px;
           line-height: 25px;
           padding-left: 20px;
