--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -91,7 +91,7 @@ Cross site syles
   #search-screen {
     text-align: center;
     position: relative;
-    height: 220px;
+    height: 280px;
     #logo {
       font-family: 'Gotham-Bold';
       font-size: 32px;
@@ -99,6 +99,7 @@ Cross site syles
     }
     #query-button {
       margin-top: 115px;
+      transition: all 0.3s ease-in-out;
     }
     #query-message {
       position: absolute;
@@ -109,6 +110,7 @@ Cross site syles
       font-size: 12px;
       font-family: 'Gotham-Bold';
       display: none;
+      transition: all 0.3s ease-in-out;
     }
     #search-form {
       margin-top: 20px;
@@ -158,6 +160,11 @@ Cross site syles
       }
       #emailbox {
         background-image: url(http://png-5.findicons.com/files/icons/2566/horizon/16/mail.png);
+        display: none;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-top-width: 0px;
+
       }
       .focus-border {
         border: 1px solid #656262 !important;
@@ -166,7 +173,7 @@ Cross site syles
 
       #email-section, #query-zip-section {
         position: absolute;
-        z-index: 0px;
+        z-index: 3;
         left: 50%;
         margin-left: -350px;
 
@@ -174,17 +181,20 @@ Cross site syles
           color: @retrored;
           font-family: 'Gotham-Medium';
           font-size: 12px;
-          transition: all 0.2s ease-in;
           height: 25px;
           line-height: 33px;
+          transition: all 0.3s ease-in-out;
+
         }
         .bottominfo-box {
-          margin: 0px auto;
+          position: absolute;
+          left: 50%;
+          margin-left: -340px;
           width: 680px;
-          border-top-right-radius: 0px;
-          border-top-left-radius: 0px;
           padding: 5px 20px;
           padding-bottom: 10px;
+          transition: all 0.3s ease-in-out;
+          display: block;
         }
       }
     }
