Removed placeholders and added comments

--- a/views/index.erb
+++ b/views/index.erb
@@ -30,7 +30,7 @@
         <div id="query-zip-section">
           <div id="query-zip-fields">
             <input type="text" id="searchbox" name="query" autofocus/>
-            <input type="text" value="94043" class="zip" id="zipbox" name="zip" maxlength = "6" step="1" pattern="\d+" autocomplete="off"/>
+            <input type="text" value="" class="zip" id="zipbox" name="zip" maxlength = "6" step="1" pattern="\d+" autocomplete="off"/>
             <label class="zipbox-label zip" for="zipbox">Zip</label>
           </div>
         <input type="email" placeholder="Your email address..." id="emailbox" name="email"/>
